--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.57:15.1": "In dem Glück und dem Hochgefühl, die aus Bewusstsein entstehen: Darin bestehen die vorteilhaften Folgen. ",
   "sn22.57:15.3": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
   "sn22.57:15.5": "Das Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen. ",
-  "sn22.57:16.1": "Alle Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben, "
+  "sn22.57:16.1": "Alle Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben, ",
+  "sn22.57:16.2": "die ihre vorteilhaften und nachteiligen Folgen und das Entrinnen davon unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Form üben: Sie üben gut. "
 }
