--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "sn22.57:15.3": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
   "sn22.57:15.5": "Das Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen. ",
   "sn22.57:16.1": "Alle Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben, ",
-  "sn22.57:16.2": "die seine vorteilhaften und nachteiligen Folgen und das Entrinnen davon unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Bewusstsein üben: Sie üben gut. "
+  "sn22.57:16.2": "die seine vorteilhaften und nachteiligen Folgen und das Entrinnen davon unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Bewusstsein üben: Sie üben gut. ",
+  "sn22.57:16.3": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. "
 }
