--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -71,5 +71,6 @@
   "sn22.57:16.3": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. ",
   "sn22.57:17.1": "Alle Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben, ",
   "sn22.57:17.2": "die seine vorteilhaften  und nachteiligen Folgen  und das Entrinnen davon unmittelbar erkannt haben und aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit sind: Sie sind gut befreit. ",
-  "sn22.57:17.3": "Die, die gut befreit sind, sind Vollkommene. "
+  "sn22.57:17.3": "Die, die gut befreit sind, sind Vollkommene. ",
+  "sn22.57:17.4": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden. "
 }
