--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -74,5 +74,6 @@
   "sn22.57:17.3": "Die, die gut befreit sind, sind Vollkommene. ",
   "sn22.57:17.4": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden. ",
   "sn22.57:17.5": "So ist ein Mönch in sieben Fällen bewandert. ",
-  "sn22.57:18.1": "Und wie untersucht ein Mönch auf drei Arten? "
+  "sn22.57:18.1": "Und wie untersucht ein Mönch auf drei Arten? ",
+  "sn22.57:18.2": "Dann untersucht ein Mönch die Elemente, die Sinnesfelder und das abhängige Entstehen. "
 }
