--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -43,5 +43,6 @@
   "dhp165:5": "purity and impurity depend on oneself -",
   "dhp165:6": "no one can purify another.",
   "dhp166:1": "One should not abandon one's own welfare",
-  "dhp166:2": "for the sake of others, no matter how many;"
+  "dhp166:2": "for the sake of others, no matter how many;",
+  "dhp166:3": "having understood one's own welfare,"
 }
