--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -4,5 +4,6 @@
   "dhp167:0.3": "Chapter of the World",
   "dhp167:1": "One should not participate in inferior teachings,",
   "dhp167:2": "one should not live negligently,",
-  "dhp167:3": "one should not participate in wrong view,"
+  "dhp167:3": "one should not participate in wrong view,",
+  "dhp167:4": "one should not get involved in the world."
 }
