--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.58:0.1": "Verbundene Lehrreden 22.58 ",
   "sn22.58:0.2": "6. Das Kapitel über Einbindung ",
-  "sn22.58:0.3": "Der vollkommen erwachte Buddha "
+  "sn22.58:0.3": "Der vollkommen erwachte Buddha ",
+  "sn22.58:1.1": "In Sāvatthī. "
 }
