--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.58:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.58:0.3": "Der vollkommen erwachte Buddha ",
   "sn22.58:1.1": "In Sāvatthī. ",
-  "sn22.58:1.2": "„Mönche und Nonnen, ein Klargewordener ist aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Form durch Nicht-Ergreifen befreit. Man nennt ihn einen vollkommen erwachten Buddha. "
+  "sn22.58:1.2": "„Mönche und Nonnen, ein Klargewordener ist aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Form durch Nicht-Ergreifen befreit. Man nennt ihn einen vollkommen erwachten Buddha. ",
+  "sn22.58:1.3": "Ein Mönch, der durch Weisheit befreit ist, ist ebenfalls aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Form durch Nicht-Ergreifen befreit. Man nennt ihn einen durch Weisheit befreiten Mönch. "
 }
