--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.58:1.3": "Ein Mönch, der durch Weisheit befreit ist, ist ebenfalls aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Form durch Nicht-Ergreifen befreit. Man nennt ihn einen durch Weisheit befreiten Mönch. ",
   "sn22.58:2.1": "Ein Klargewordener, ein Vollendeter, ein vollkommen erwachter Buddha ist aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Gefühl … ",
   "sn22.58:3.1": "in Bezug auf Wahrnehmung … ",
-  "sn22.58:3.2": "in Bezug auf Entscheidungen … "
+  "sn22.58:3.2": "in Bezug auf Entscheidungen … ",
+  "sn22.58:3.3": "in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit. Man nennt ihn einen vollkommen erwachten Buddha. "
 }
