--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.58:3.1": "in Bezug auf Wahrnehmung … ",
   "sn22.58:3.2": "in Bezug auf Entscheidungen … ",
   "sn22.58:3.3": "in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit. Man nennt ihn einen vollkommen erwachten Buddha. ",
-  "sn22.58:3.4": "Ein Mönch, der durch Weisheit befreit ist, ist ebenfalls aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit. Man nennt ihn einen durch Weisheit befreiten Mönch. "
+  "sn22.58:3.4": "Ein Mönch, der durch Weisheit befreit ist, ist ebenfalls aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit. Man nennt ihn einen durch Weisheit befreiten Mönch. ",
+  "sn22.58:4.1": "Was ist nun der Unterschied zwischen dem Toren und dem Klugen?“ "
 }
