--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
@@ -10,5 +10,5 @@
   "sn22.58:3.2": "in Bezug auf Entscheidungen … ",
   "sn22.58:3.3": "in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit. Man nennt ihn einen vollkommen erwachten Buddha. ",
   "sn22.58:3.4": "Ein Mönch, der durch Weisheit befreit ist, ist ebenfalls aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit. Man nennt ihn einen durch Weisheit befreiten Mönch. ",
-  "sn22.58:4.1": "Was ist nun der Unterschied zwischen dem Toren und dem Klugen?“ "
+  "sn22.58:4.1": "Was ist nun der Unterschied zwischen einem Klargewordenen, einem Vollendeten, einem vollkommen erwachten Buddha und einem durch Weisheit befreiten Mönch?“ "
 }
