--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.58:3.3": "in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit. Man nennt ihn einen vollkommen erwachten Buddha. ",
   "sn22.58:3.4": "Ein Mönch, der durch Weisheit befreit ist, ist ebenfalls aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit. Man nennt ihn einen durch Weisheit befreiten Mönch. ",
   "sn22.58:4.1": "Was ist nun der Unterschied zwischen einem Klargewordenen, einem Vollendeten, einem vollkommen erwachten Buddha und einem durch Weisheit befreiten Mönch?“ ",
-  "sn22.58:4.2": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ "
+  "sn22.58:4.2": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ ",
+  "sn22.58:4.3": "„Also dann, Mönche und Nonnen, hört zu und passt gut auf, ich werde sprechen.“ "
 }
