--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.58:4.1": "Was ist nun der Unterschied zwischen einem Klargewordenen, einem Vollendeten, einem vollkommen erwachten Buddha und einem durch Weisheit befreiten Mönch?“ ",
   "sn22.58:4.2": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ ",
   "sn22.58:4.3": "„Also dann, Mönche und Nonnen, hört zu und passt gut auf, ich werde sprechen.“ ",
-  "sn22.58:4.4": "„Ja, Herr“, antworteten sie. "
+  "sn22.58:4.4": "„Ja, Herr“, antworteten sie. ",
+  "sn22.58:4.5": "Der Buddha sagte: "
 }
