--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.58_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.58:4.2": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ ",
   "sn22.58:4.3": "„Also dann, Mönche und Nonnen, hört zu und passt gut auf, ich werde sprechen.“ ",
   "sn22.58:4.4": "„Ja, Herr“, antworteten sie. ",
-  "sn22.58:4.5": "Der Buddha sagte: "
+  "sn22.58:4.5": "Der Buddha sagte: ",
+  "sn22.58:5.1": "„Ein Klargewordener, ein Vollendeter, ein vollkommen erwachter Buddha lässt den nicht erschienenen Pfad erscheinen, gebiert den nicht geborenen Pfad, erklärt den nicht erklärten Pfad. Er ist der Kenner des Pfades, der Entdecker des Pfades, ist mit dem Pfad vertraut. "
 }
