--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.60:0.1": "Verbundene Lehrreden 22.60 ",
-  "sn22.60:0.2": "6. Das Kapitel über Einbindung "
+  "sn22.60:0.2": "6. Das Kapitel über Einbindung ",
+  "sn22.60:0.3": "Mit Mahāli "
 }
