--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.60:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.60:0.3": "Mit Mahāli ",
   "sn22.60:1.1": "So habe ich es gehört: ",
-  "sn22.60:1.2": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. "
+  "sn22.60:1.2": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
+  "sn22.60:1.3": "Da ging der Licchaver Mahāli zum Buddha … und sagte zu ihm: "
 }
