--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -370,7 +370,7 @@
   "dn34:2.1.0": "8. Achtergruppen ",
   "dn34:2.1.1": "Acht Dinge sind eine große Hilfe usw. ",
   "dn34:2.1.2": "Welche acht Dinge sind eine große Hilfe? ",
-  "dn34:2.1.3": "Es gibt acht Gründe und Anlässe, die dazu führen, dass man die Weisheit, die grundlegend für das geistliche Leben ist, erwirbt, und wenn sie erworben wurde, dazu, dass sie anwächst, reift und sich vollständig entwickelt. ",
+  "dn34:2.1.3": "Es gibt acht Ursachen und Bedingungen, die dazu führen, dass man die Weisheit, die grundlegend für das geistliche Leben ist, erwirbt, und wenn sie erworben wurde, dazu, dass sie anwächst, reift und sich vollständig entwickelt. ",
   "dn34:2.1.4": "Welche acht? ",
   "dn34:2.1.5": "Da lebt eine Nonne, indem sie sich auf den Lehrer oder einen geistlichen Gefährten in der Lehrerrolle stützt. Und sie entwickelt ihnen gegenüber einen ausgeprägten Sinn für Gewissen und Besonnenheit mit Zuneigung und Achtung. ",
   "dn34:2.1.6": "Das ist der erste Grund. ",
