--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -373,7 +373,7 @@
   "dn34:2.1.3": "Es gibt acht Ursachen und Bedingungen, die dazu führen, dass man die Weisheit, die grundlegend für das geistliche Leben ist, erwirbt, und wenn sie erworben wurde, dazu, dass sie anwächst, reift und sich vollständig entwickelt. ",
   "dn34:2.1.4": "Welche acht? ",
   "dn34:2.1.5": "Da lebt eine Nonne, indem sie sich auf den Lehrer oder einen geistlichen Gefährten in der Lehrerrolle stützt. Und sie entwickelt ihnen gegenüber einen ausgeprägten Sinn für Gewissen und Besonnenheit mit Zuneigung und Achtung. ",
-  "dn34:2.1.6": "Das ist der erste Grund. ",
+  "dn34:2.1.6": "Das ist die erste Ursache. ",
   "dn34:2.1.7": "Wenn eine Nonne so mit dem Lehrer oder einem geistlichen Gefährten in der Lehrerrolle lebt – mit einem ausgeprägten Sinn für Gewissen und Besonnenheit mit Zuneigung und Achtung –, geht sie von Zeit zu Zeit hin und stellt Fragen: ",
   "dn34:2.1.8": "‚Warum, Herr, heißt es so? ",
   "dn34:2.1.9": "Was bedeutet das?‘ ",
