--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -388,7 +388,7 @@
   "dn34:2.1.18": "Dann lebt da ein Mönch so, dass er seine Energie aufrüttelt, um untaugliche Eigenschaften aufzugeben und sich taugliche Eigenschaften zu eigen zu machen. Er ist stark, beharrlich strebsam, und lässt nicht nach beim Entwickeln tauglicher Eigenschaften. ",
   "dn34:2.1.19": "Das ist die sechste Ursache. ",
   "dn34:2.1.20": "Dann ist da eine Nonne achtsam. Sie besitzt äußerste Achtsamkeit und Wachheit, und an Dinge, die vor langer Zeit getan oder gesagt wurden, kann sie sich erinnern und sie sich ins Gedächtnis rufen. ",
-  "dn34:2.1.21": "Das ist der siebte Grund. ",
+  "dn34:2.1.21": "Das ist die siebte Ursache. ",
   "dn34:2.1.22": "Dann meditiert da ein Mönch, indem er das Entstehen und Vergehen bei den fünf mit Ergreifen verbundenen Aggregaten beobachtet. ",
   "dn34:2.1.23": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. ",
   "dn34:2.1.24": "So ist Gefühl, so ist sein Ursprung, so sein Enden. ",
