--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.60:1.3": "Da ging der Licchaver Mahāli zum Buddha … und sagte zu ihm: ",
   "sn22.60:2.1": "„Herr, Pūraṇa Kassapa sagt: ",
   "sn22.60:2.2": "‚Es gibt keine Ursache und keine Bedingung für die Verunreinigung der Lebewesen. ",
-  "sn22.60:2.3": "Lebewesen werden ohne Ursache oder Bedingung verunreinigt. "
+  "sn22.60:2.3": "Lebewesen werden ohne Ursache oder Bedingung verunreinigt. ",
+  "sn22.60:2.4": "Es gibt keine Ursache und keine Bedingung für die Läuterung der Lebewesen. "
 }
