--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.60:2.4": "Es gibt keine Ursache und keine Bedingung für die Läuterung der Lebewesen. ",
   "sn22.60:2.5": "Lebewesen werden ohne Ursache oder Bedingung geläutert.‘ ",
   "sn22.60:2.6": "Was sagt der Buddha dazu?“ ",
-  "sn22.60:3.1": "„Mahāli,es gibt eine Ursache und eine Bedingung für die Verunreinigung der Lebewesen. "
+  "sn22.60:3.1": "„Mahāli,es gibt eine Ursache und eine Bedingung für die Verunreinigung der Lebewesen. ",
+  "sn22.60:3.2": "Lebewesen werden aufgrund von Ursache und Bedingung verunreinigt. "
 }
