--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.60:3.1": "„Mahāli,es gibt eine Ursache und eine Bedingung für die Verunreinigung der Lebewesen. ",
   "sn22.60:3.2": "Lebewesen werden aufgrund einer Ursache und Bedingung verunreinigt. ",
   "sn22.60:3.3": "Es gibt eine Ursache und eine Bedingung für die Läuterung der Lebewesen. ",
-  "sn22.60:3.4": "Lebewesen werden aufgrund einer Ursache und Bedingung geläutert.“ "
+  "sn22.60:3.4": "Lebewesen werden aufgrund einer Ursache und Bedingung geläutert.“ ",
+  "sn22.60:4.1": "„Aber Herr, was ist die Ursache und Bedingung für die Verunreinigung der Lebewesen? "
 }
