--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.60:5.2": "Aber da Form angenehm ist – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, lieben die Lebewesen sie. ",
   "sn22.60:5.3": "Da sie sie lieben, sind sie daran gebunden und werden so verunreinigt. ",
   "sn22.60:5.4": "Das ist eine Ursache und Bedingung für die Verunreinigung der Lebewesen. ",
-  "sn22.60:5.5": "So werden Lebewesen aufgrund von Ursache und Bedingung verunreinigt. "
+  "sn22.60:5.5": "So werden Lebewesen aufgrund von Ursache und Bedingung verunreinigt. ",
+  "sn22.60:6.1": "Wenn Gefühl ausschließlich schmerzhaft wäre … "
 }
