--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.60:5.4": "Das ist eine Ursache und Bedingung für die Verunreinigung der Lebewesen. ",
   "sn22.60:5.5": "So werden Lebewesen aufgrund von Ursache und Bedingung verunreinigt. ",
   "sn22.60:6.1": "Wenn Gefühl ausschließlich schmerzhaft wäre … ",
-  "sn22.60:7.1": "Wenn Wahrnehmung ausschließlich schmerzhaft wäre … "
+  "sn22.60:7.1": "Wenn Wahrnehmung ausschließlich schmerzhaft wäre … ",
+  "sn22.60:7.2": "Wenn Entscheidungen ausschließlich schmerzhaft wären … "
 }
